--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dungeoncrawl"
+name = "dungeon"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,4 +9,4 @@ edition = "2021"
 bracket-lib = "~0.8.1"
 legion = "=0.3.1"
 serde = { version = "=1.0.115" }
-ron = "=0.6.1"
+ron = "=0.6.1"  
